[package]
name = "plc_secure_checker"
version = "0.1.0"
edition = "2021"
build = "build.rs"
[lib]
name="plc_secure_checker_lib"
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
quick-xml = "0.36"
regex = "1.10"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pest = "2.7.10"
pest_derive = "2.7.10"
once_cell = "1.19.0"
lazy_static = "1.4.0"

[build-dependencies]
pest_generator = { version = "2.7.10", features = ["grammar-extras"] }